# CRDT-Library

./: .gitignore  CMakeLists.txt  CRDT_Sets.cpp  CRDT_Test.cpp  LICENSE  Makefile  README.md  TestCRDT.cpp  acknowledgements.txt  build.sh  cmake_install.cmake  generate.sh  generate_prebuilt_tests.sh  generate_test_application.sh  run_database_application.sh  run_performance.sh  run_test_application.sh  run_tests.sh  run_trello_application.sh
Networking/: client  (+6 more)
database_application/: CMakeLists.txt  main.cpp
database_application/TextDB/: new1123.txt  new2123.txt  newuser11234.txt  user11234.txt  user21234.txt  user31234.txt  usera123.txt  userb123.txt  vishwa1testpw1.txt  vishwa2testpw2.txt
database_application/database/: gmap.csv  multiset.csv  pncounter.csv
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  perf_cross_comparing.py  test.cpp
tests/temp_data/: gcounter1B.json  gcounterA.json  gcounterC.json  gmap1A.json  gmap1B.json  gmap1C.json  gset1A.json  gset1B.json  gset1C.json  lwwmultiset1A.json  lwwmultiset1B.json  lwwmultiset1C.json  multiset1A.json  multiset1B.json  multiset1C.json  orset1A.json  orset1B.json  orset1C.json  pncounter1A.json  pncounter1B.json  pncounter1C.json  priorityqueue1A.json  priorityqueue1B.json  priorityqueue1C.json  string1A.json  string1B.json  twopset1A.json  twopset1B.json  twopset1C.json  twoptwopgraph1A.json  twoptwopgraph1B.json  twoptwopgraph1C.json  vector1A.json  vector1B.json  vector1C.json
trello_application/: CMakeLists.txt  clean.sh  main.cpp  userLogin.hpp
trello_application/TextDB/: .txt  [po[po[oppo[op.txt  abc1123.txt  bob1.txt  bob123.txt  dfddfd.txt  dfdsfsddsfsdfsd.txt  dfdsgfgdfgf.txt  dfsddsfsd.txt  fdfsdfdfsd.txt  fdsdfsd.txt  ghgfhfghfghf.txt  jhgjghhgjgh.txt  kl;kll;kkl.txt  klk;fsdgsd.txt  rushab10112345.txt  sddf123.txt  tapsyoyo.txt  user1123.txt  user2123.txt  user3123.txt
trello_application/json/backlog/: bob_backlog.json  taps1_backlog.json  taps_backlog.json
trello_application/json/complete/: bob_complete.json
trello_application/json/inprogress/: bob_inprogress.json  taps_inprogress.json
trello_application/json/notadded/: bob_notadded.json  taps1_notadded.json
(+128 files in other folders)
